style.css
body {
    font-family: 'Inter', sans-serif;
    min-height: 100vh;
    overflow-x: hidden;
}

.taskbar {
    list-style-type: none;
    margin: 20px 35px;
    height: 5vh;
    position: relative;

    /* border: 1px solid orange; */
}

.taskbar .links {
    margin-left: auto;
    width: 20vw;
    position: absolute;
    top: 0;
    right: 0;
    text-align: right;

    /* border: 1px solid orange; */
}

.taskbar li {
    display: inline;    
}

.taskbar li a {
    text-decoration: none;
    font-size: 20px;
    color: black;
    margin-right: 10px;
}

.taskbar .name {
    width: 20vw;
    position: absolute;
    top: 0;
    left: 0;
    text-align: left;

    /* border: 1px solid orange; */
}

.taskbar .name a{
    cursor: default;
    font-size: 20px;
    color: black;
    margin-left: 10px;
    font-weight: bold;
}

.intro-container {
    display: flex;
    position: relative;
    top: 15vh;
    width: 45vw;
    height: 50vh;   
    margin-left: 25vw;

    /* border: 1px solid orange; */
}

.intro-container .bio-container {
    position: relative;
    margin-left: 25px;
    margin-top: 0;

    /* border: 1px solid orange; */
}

.intro-container h1 {
    font-size: 70px;
    margin-top: 60px;
    margin-bottom: 30px;
}

.intro-container h3 {
    font-size: 25px;
    margin-top: 0;
    margin-bottom: 0;
}

.intro-container p {
    margin-top: 10px;
}

.intro-container .picture {
    align-self: center;
    object-position: left;
}

.intro-container img {
    border-radius: 50%;
}

/* .footerContainer {
    display: flex;
    /* flex-direction: row; */
    /* justify-content: space-between;

    border-top: 1px solid lightgrey;
    border-right: none;
    border-left: none;
    border-bottom: none;

    position: sticky;
    top: 100%;
    margin: 10px 25px;
}  */

.project-container {
    position: absolute;
    margin: 0;
    padding: 0;
    top: 100vh;
    width: 100vw;
    max-width:100%;
    left: 0;

    border: 2px solid orange;
}

.project-container .project-header {
    position: relative;
    font-size: 22px;
    border: 1px solid black;
    text-align: center;
    padding: 0;
    margin-bottom: 0;
}

.project-container .example-container {
    position: relative;
    border: 2px solid blue;
    
    display: grid;
    grid-column-gap: 50px;
    grid-template-columns: repeat(2, auto);
    justify-content:space-evenly;


}

